# nnfs

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
cuda_kernels/: CMakeLists.txt
cuda_kernels/include/: kernels.h
cuda_kernels/src/: bindings.cu  kernels.cu
py_modules/: __init__.py  activations.py  cuda_kernels.pyi  device.py  initializers.py  layers.py  losses.py  metrics.py  model.py  network.py  optimizers.py  utils.py
